# CmbApplicationFAW

./: CMakeLists.txt  README
CMB-2.0.2/cfg/: CMB_Framework_config.cfg
CMB-2.0.2/dll/: libsocket.so.3
CMB-2.0.2/exe/: Cmb_application.out
CMB-2.0.2/include/: CMB_ACS_Adaptor.h  CMB_AMS_Adaptor.h  CMB_AMS_Adaptor_Config.h  CMB_ASDS_Adaptor.h  CMB_ASDS_Adaptor_Config.h  CMB_AdaptorInterface.h  CMB_Adaptor_List.h  CMB_BAF_Adaptor.h  CMB_BAF_Adaptor_Config.h  CMB_BAF_LibraryHandler.h  CMB_BCF_Adaptor.h  CMB_BCF_Adaptor_Config.h  CMB_BCF_LibraryHandler.h  CMB_BRF_Adaptor.h  CMB_BRF_Adaptor_Config.h  CMB_BRF_LibraryHandler.h  CMB_BTF_Adaptor.h  CMB_BTF_Adaptor_Config.h  CMB_BTF_LibraryHandler.h  CMB_CSD2_Adaptor.h  CMB_CSD2_Adaptor_Config.h  CMB_Control_Adaptor.h  CMB_Framework.h  CMB_Framework_config.h  CMB_IO-AUDIO_Adaptor.h  CMB_IO-AUDIO_Adaptor_Config.h  CMB_IO-AUDIO_Stub.h  CMB_Logger.h  CMB_Message_Helper.h  CMB_OSAL.h  CMB_Socket_Helper.h  CMB_Socket_Types.h  CMB_Tuning_Adaptor.h  DALReg.h  DALStdErr.h  DALSys.h  DALSysTypes.h  DalDevice.h  alisp.h  alsa-symbols.h  (+32 more)
CMB-2.0.2/src/: SConstruct.py  main.c
include/BAF/: BAF.h  BAF_Callback_Func.h  BAF_Callback_Register.h  BAF_Dll.h  BAF_Func.h  BAF_Resource.h
include/BCF/: BCF.h  BCF_Callback_Func.h  BCF_Callback_Register.h  BCF_Dll.h
include/BRF/: BRF_Callback_Func.h  BRF_Callback_Register.h  BRF_Dll.h  BRF_Resource.h
include/BTF/: BTF.h  BTF_Callback_Func.h  BTF_Callback_Register.h  BTF_Dll.h  BTF_Resource.h
include/CART/Runtime/: BAF.c  BAF_Lite.c  BCF.c  BRF.c  BTF.c  Buffer.c  Buffer.h  CMB.c  Callback_Register.h  Connection.c  Connection.h  Error.c  Error.h  Error_Id.h  Execution.c  Execution.h  Framework_Builder.c  Framework_Builder.h  Framework_Param.h  Heap.c  Heap.h  ISemaphore.h  JFramework.c  JFramework.h  JModule.c  JModule.h  JModule_Command.c  JModule_Command.h  JModule_Context.c  JModule_Context.h  JModule_Func.c  JModule_Func.h  JProcess.h  JSemaphore.h  Log.c  Log.h  Logger.c  Logger.h  Message.c  Message.h  (+37 more)
include/CART/Runtime/Audio_Graph/: Audio_Graph.h  Connection_Item.h  Connection_List.h  Execution_List.h  JModule_Bitfield.h  JModule_Id.h  JModule_List.h  Module_List.h  Port_Direction.h  Port_Item.h  Port_List.h
include/CART/Runtime/BAF/: BAF_Callback.h  BAF_Message.h  BAF_Message_Id.h  BAF_Semaphore.h  BAF_Version.h
include/CART/Runtime/BCF/: BCF_Callback.h  BCF_Resource.h
include/CART/Runtime/BRF/: BRF.h  BRF_Callback.h
include/CART/Runtime/BTF/: BTF_Callback.h
include/CART/Runtime/CART/: CART.h  CART_Cmd_Ret.h  CART_MESSAGE_ID.h
include/CART/Runtime/CMB/: CMB.h  CMB_Resource.h  CMB_TYPES.h
include/CART/include/: CART_EXEC_ID.h  CART_ID.h  CART_MESSAGE_TYPE.h  CART_Message.h  CART_STATUS.h
lib/: libasound.so.4  libdalconfig.so.1
src/: CMB_Framework.c  CMB_Framework_config.cpp  CMB_Framework_private.h  main.c
